test_project/test_pcks/invalid/shader.gdshader
shader_type spatial;

void fragment() {
}
